Closed
Bug 1509579
Opened 7 years ago
Closed 7 years ago
Crash in OOM | large | NS_ABORT_OOM | nsIFrame::MarkNeedsDisplayItemRebuild
Categories
(Core :: Web Painting, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla65
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox63 | --- | unaffected |
| firefox64 | --- | wontfix |
| firefox65 | --- | fixed |
People
(Reporter: philipp, Assigned: mikokm)
References
(Blocks 1 open bug)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(2 files)
This bug was filed from the Socorro interface and is
report bp-1fdcaa54-94cd-483a-9461-9af340181123.
=============================================================
Top 10 frames of crashing thread:
0 xul.dll NS_ABORT_OOM xpcom/base/nsDebugImpl.cpp:628
1 xul.dll nsIFrame::MarkNeedsDisplayItemRebuild layout/generic/nsFrame.cpp:1048
2 xul.dll nsIFrame::SetSize layout/generic/nsIFrame.h:1074
3 xul.dll void nsBlockFrame::ReflowBlockFrame layout/generic/nsBlockFrame.cpp:3716
4 xul.dll void nsBlockFrame::ReflowDirtyLines layout/generic/nsBlockFrame.cpp:2460
5 xul.dll nsBlockFrame::Reflow layout/generic/nsBlockFrame.cpp:1294
6 xul.dll void nsBlockReflowContext::ReflowBlock layout/generic/nsBlockReflowContext.cpp:309
7 xul.dll void nsBlockFrame::ReflowBlockFrame layout/generic/nsBlockFrame.cpp:3573
8 xul.dll void nsBlockFrame::ReflowDirtyLines layout/generic/nsBlockFrame.cpp:2460
9 xul.dll nsBlockFrame::Reflow layout/generic/nsBlockFrame.cpp:1294
=============================================================
this oom signature is newly showing up from installations on windows in firefox 64. could this be related to the work in
Flags: needinfo?(mikokm)
| Assignee | ||
Comment 1•7 years ago
|
||
The changes for bug 1488599 removed the check for modified frames count, which might have caused this. I am looking into this.
Assignee: nobody → mikokm
Status: NEW → ASSIGNED
Flags: needinfo?(mikokm)
Priority: -- → P2
| Assignee | ||
Comment 2•7 years ago
|
||
| Assignee | ||
Comment 3•7 years ago
|
||
Depends on D13279
Pushed by mikokm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/6a516d21eae6
Part 1: Do not mark frames modified after the rebuild limit has been reached r=mattwoodrow
https://hg.mozilla.org/integration/autoland/rev/57816e067da5
Part 2: Do not call MarkNeedsDisplayItemRebuild(), when GetDependentFrame() == Frame() r=mattwoodrow
Comment 5•7 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/6a516d21eae6
https://hg.mozilla.org/mozilla-central/rev/57816e067da5
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Comment 6•7 years ago
|
||
No crashes on Beta65 so far.
Comment 7•7 years ago
|
||
Crash volume on 64 release doesn't seem too worrying so far, I'll call this wontfix.
You need to log in
before you can comment on or make changes to this bug.
Description
•