Bug 1509579 - Part 1: Do not mark frames modified after the rebuild limit has been reached r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D13279

--HG--
extra : moz-landing-system : lando